karl package Changelog
======================

Unreleased
----------

- hid the overflow on the main content area, so that when wide items are
  entered, the entire content area won't fall beneath the left menu in IE.
  (LP #576042)

3.36 (2010-06-27)
-----------------

- Fixed UI bug where actions in folder views did not correspond to user's
  permissions.  (LP #594180)

- Added evolve script to remove some broken objects that seem to be left over
  from the migration of profile photos to image drawer.  These were blocking
  reindexing of profiles.  (LP #594131)

- Fixed bug where profiles add via cico (OSI, using gsa_sync) were indexed with
  a bogus value for the 'allowed' index. Updated evolve script to reindex the
  people directory.  (LP #594131)

- Added stub for console script, reindex_peopledir.

- Fixed bug where 'home_path' was being clobbered by edit profile form.
  (LP #594127)

- Updated the rss feed update code to only update a feed if the upstream feed
  contains entries.  (LP #594352)

3.35 (2010-06-08)
-----------------

- Members views were not updated to use the new websites field after multiple
  websites change from 3.34, which caused an unexpected parameter error when
  creating a new profile after invitation. Fixed and updated tests. (LP #591267).

- Fixed bug in whitelist--address matching is now normalized to be indifferent
  to the inclusion or exclusion of a name part with an email address.  (IE,
  'Fred Flintstone <test@example.com>' == 'test@example.com')

3.34 (2010-06-04)
-----------------

- Updated formatting for wiki body in e-mail alerts (LP #588905)

- Added a ``site_announce`` script to set / clear the site announcement
  text from the command line (LP #579520).

- Ensured that wiki pages cannot be added outside of the wiki tool
  (LP #586458).

- Made profiles support multiple websites (LP #554018).

- updated maintenance page (LP #587432)

- Changed HTML ID for email icon in blog listing for customizations
  (LP #582500).
