@@ -4,6 +4,10 @@ karl package Changelog
 Unreleased
 ----------
 
+- Updated mailin code to respect X-Postoffice-Rejected headers coming from
+  repoze.postoffice and special cased the bounce message when a message is
+  rejected to due to vacation loop detection throttling. (LP #597835)
+
 - hid the overflow on the main content area, so that when wide items are
   entered, the entire content area won't fall beneath the left menu in IE.
   (LP #576042)
